# Egg-System

./: CMakeLists.txt  README.md  egg-common.cmake.in  egg-compiler.pc.in
cmake/: ConfigureCompiler.cmake  ConfigureGnuCCAttrinutes.cmake  ConfigureGnuCCFlags.cmake
include/: CMakeLists.txt
include/egg/: common.hpp
include/egg/compiler/: gcc.h.in
